Fixed user navigation spacing issues in safari which resolves #11. Removed list discs in firefox which resolves #13.

--- a/_source/scss/components/_buttons.scss
+++ b/_source/scss/components/_buttons.scss
@@ -162,7 +162,7 @@
   display: block;
   float: left;
   color: $red;
-  line-height: 46px;
+  line-height: 52px;
   text-decoration: none;
   text-transform: uppercase;
 }
